[package]
name = "ba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
netconf-client = { git = "https://github.com/rsitko92/netconf-client.git" }
yang2 = "0.8.1"
serial_test = "3.0.0"
